fix(layout): show scrollbar by default to prevent jumping layout

--- a/src/app/components/knx-navigation/navbar.component.scss
+++ b/src/app/components/knx-navigation/navbar.component.scss
@@ -37,7 +37,7 @@ $knx-navbar-font: $font-size-base;
 .navbar > .container-fluid .navbar-brand,
 .knx-navbar.navbar-toggleable-md .navbar-nav .nav-item .navbar-brand {
   margin-left: 0;
-  padding-top: 0.5em;
+  padding-top: 0.8em;
 }
 
 .knx-navbar .navbar-nav .nav-item {
