--- a/src/app/pages/car/advice/car-advice.component.scss
+++ b/src/app/pages/car/advice/car-advice.component.scss
@@ -1,7 +1,3 @@
-.knx-car-advice {
-  margin-top: 50px;
-}
-
 .knx-car-advice__editoptions {
   &:before {
     content: map-get($knx-icons, pencil);
