--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -47,6 +47,7 @@
 
 html {
   box-sizing: border-box;
+  overflow-y: scroll;
 }
 
 *,
